--- a/src/app/modeldrivenc/modeldrivenc.component.html
+++ b/src/app/modeldrivenc/modeldrivenc.component.html
@@ -1,6 +1,6 @@
 <div class ="container">
   <h2>User Data</h2>
-  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class ="form-group">
       <label>Name</label>
       <input type="text"    class="form-control" formControlName="name" >
