adding ng model

--- a/src/app/form-validation/form-validation.component.html
+++ b/src/app/form-validation/form-validation.component.html
@@ -14,6 +14,18 @@
         <div class ="form-group">
             <label>State</label>
             <input type="text" required name="state"   class="form-control" ngModel>
+          
+          
+          </div>
+          <div class ="form-group">
+            <label>City</label>
+            <input type="text" required name="city"   class="form-control" ngModel>
+          
+          </div>
+          <div class ="form-group">
+            <label>postalcode</label>
+            <input type="text" required name="city"   class="form-control" ngModel>
+          
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
     </form>
