--- a/src/app/teplate/teplate.component.html
+++ b/src/app/teplate/teplate.component.html
@@ -21,7 +21,7 @@
     <label>postelcode</label>
     <input type="text"    class="form-control" name="city" ngModel>
   </div>
-  <button>Submit</button>
+  <button  type="submit" class="btn btn-primary">Submit</button>
 </form>
 
 
