--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-templateuser></app-templateuser>
+<app-formbuilder></app-formbuilder>
 <!--<div class ="container">
     <h2>User Data</h2>
     <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
