--- a/src/app/formbuilder/formbuilder.component.html
+++ b/src/app/formbuilder/formbuilder.component.html
@@ -1,20 +1,30 @@
 <div class ="container">
-    <h2>User Data</h2>
-    <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
-      <div class ="form-group">
-        <label>Name</label>
-        <input #nameRef type="text"   required class="form-control" name="name" ngModel>
-        {{nameRef.className}}
-      </div>
-      <div class ="form-group">
-          <label>Email</label>
-          <input  type="text" required name="email"  class="form-control" ngModel>
-          
-        </div>
-        <div class ="form-group">
-            <label>State</label>
-            <input type="text" required name="state"   class="form-control" ngModel>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+  <h2>User Data</h2>
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+    <div class ="form-group">
+      <label>Name</label>
+      <input type="text"    class="form-control" formControlName="name" >
     </div>
+    <div class ="form-group">
+        <label>Email</label>
+        <input type="text"  name="email"  class="form-control"  formControlName="email">
+      </div>
+      <!-- <div formGroupName="address">
+
+          <div class ="form-group">
+              <label>State</label>
+              <input type="text"  name="state"   class="form-control" formControlName="state">
+            </div>
+            <div class ="form-group">
+                <label>City</label>
+                <input type="text"  name="city"   class="form-control"  formControlName="city">
+              </div>
+              <div class ="form-group">
+                  <label>PostelCode</label>
+                  <input type="text"  name="city"   class="form-control" formControlName="postelcode">
+                </div>
+      </div> -->
+      
+        <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+  </div>
