--- a/src/app/formbuilder/formbuilder.component.html
+++ b/src/app/formbuilder/formbuilder.component.html
@@ -9,7 +9,7 @@
         <label>Email</label>
         <input type="text"  name="email"  class="form-control"  formControlName="email">
       </div>
-      <!-- <div formGroupName="address">
+      <div formGroupName="address">
 
           <div class ="form-group">
               <label>State</label>
@@ -23,7 +23,7 @@
                   <label>PostelCode</label>
                   <input type="text"  name="city"   class="form-control" formControlName="postelcode">
                 </div>
-      </div> -->
+      </div>
       
         <button type="submit" class="btn btn-primary">Submit</button>
   </form>
