--- a/src/app/form-validation/form-validation.component.html
+++ b/src/app/form-validation/form-validation.component.html
@@ -3,12 +3,12 @@
     <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
       <div class ="form-group">
         <label>Name</label>
-        <input #nameRef type="text"   required minlength="5"  class="form-control" name="name" ngModel>
+        <input #nameRef type="text"   required minlength="5" maxlength="12"  class="form-control" name="name" ngModel>
         {{nameRef.className}}
       </div>
       <div class ="form-group">
           <label>Email</label>
-          <input  type="text" required name="email"  class="form-control" ngModel>
+          <input  type="text" required name="email"  email class="form-control" ngModel>
           
         </div>
         <div class ="form-group">
