--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-templatedriven></app-templatedriven>
+<app-modeldriven></app-modeldriven>
 <!--<div class ="container">
     <h2>User Data</h2>
     <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
