--- a/src/app/modeldriven/modeldriven.component.html
+++ b/src/app/modeldriven/modeldriven.component.html
@@ -6,9 +6,13 @@
         <input type="text"    class="form-control" formControlName="name" >
        
       </div>
-       <div class ="form-group">
+       <!-- <div class ="form-group">
           <label>Email</label>
           <input type="text"  name="email"  class="form-control"  formControlName="email">
+        </div>
+        <div class ="form-group">
+          <label>Age</label>
+          <input type="text"  name="age"  class="form-control"  formControlName="age">
         </div>
        <div formGroupName="address">
 
@@ -22,9 +26,9 @@
                 </div>
                 <div class ="form-group">
                     <label>PostelCode</label>
-                    <input type="text"  name="city"   class="form-control" formControlName="postelcode">
+                    <input type="text"  name="postalcode"   class="form-control" formControlName="postelcode">
                   </div>
-        </div>
+        </div> -->
         
           <button  type="submit" class="btn btn-primary">Submit</button>
     </form>
