--- a/src/app/form-validation/form-validation.component.html
+++ b/src/app/form-validation/form-validation.component.html
@@ -1,32 +1,32 @@
 <div class ="container">
-    <h2>User Data</h2>
-    <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
-      <div class ="form-group">
-        <label>Name</label>
-        <input #nameRef type="text"   required minlength="5" maxlength="12"  class="form-control" name="name" ngModel>
-        {{nameRef.className}}
-      </div>
-      <div class ="form-group">
-          <label>Email</label>
-          <input  type="text" required name="email"  email class="form-control" ngModel>
-          
+      <h2>User Data</h2>
+      <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
+        <div class ="form-group">
+          <label>Name</label>
+          <input #nameRef type="text"   required minlength="5" class="form-control" name="name" ngModel>
+          {{nameRef.className}}
         </div>
         <div class ="form-group">
-            <label>State</label>
-            <input type="text" required name="state"   class="form-control" ngModel>
-          
-          
+            <label>Email</label>
+            <input  type="text" email required name="email"  email class="form-control" ngModel>
+            
           </div>
           <div class ="form-group">
-            <label>City</label>
-            <input type="text" required name="city"   class="form-control" ngModel>
-          
-          </div>
-          <div class ="form-group">
-            <label>postalcode</label>
-            <input type="text" required name="city"   class="form-control" ngModel>
-          
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+              <label>State</label>
+              <input type="text" required name="state"   class="form-control" ngModel>
+            
+            
+            </div>
+            <div class ="form-group">
+              <label>City</label>
+              <input type="text" required name="city"   class="form-control" ngModel>
+            
+            </div>
+            <div class ="form-group">
+              <label>postalcode</label>
+              <input type="text" required name="city"   class="form-control" ngModel>
+            
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </div>
