--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,4 @@
-<app-modeldriven></app-modeldriven>
-<!--<div class ="container">
-    <h2>User Data</h2>
-    <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
-      <div class ="form-group">
-        <label>Name</label>
-        <input type="text"    class="form-control" name="name" ngModel>
-      </div>
-      <div class ="form-group">
-          <label>Email</label>
-          <input type="text"  name="email"  class="form-control" ngModel>
-        </div>
-        <div class ="form-group">
-            <label>State</label>
-            <input type="text"  name="state"   class="form-control" ngModel>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    </div>-->
+<!-- <app-modeldriven></app-modeldriven> -->
+<!-- <app-modeldriven></app-modeldriven> -->
+<!-- <button (click)="onClickData()" class="btn-color">ok</button> -->
+<app-new-component></app-new-component>
