--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- <app-modeldriven></app-modeldriven> -->
 <!-- <app-modeldriven></app-modeldriven> -->
 <!-- <button (click)="onClickData()" class="btn-color">ok</button> -->
-<app-new-component></app-new-component>
+<app-form-validation></app-form-validation>
